--- a/Front/.vscode/tasks.json
+++ b/Front/.vscode/tasks.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "Serve Frontend",
       "type": "npm",
       "script": "start",
       "isBackground": true,
