--- a/Front/dockerfile
+++ b/Front/dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 # Copier les fichiers de l'application
 COPY package*.json ./
 COPY angular.json ./
-COPY tsconfig.json ./
+COPY tsconfig*.json ./
 COPY src ./src
 
 # Installer les dépendances
