--- a/Back/dockerfile
+++ b/Back/dockerfile
@@ -14,9 +14,8 @@ COPY gameState.py ./
 # Installer les dépendances
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Exposer le port 5000 et 4200
+# Exposer le port 5000
 EXPOSE 5000
-EXPOSE 4200
 
 # Démarrer l'application Flask
 CMD ["flask", "run"]
