--- a/Back/dockerfile
+++ b/Back/dockerfile
@@ -17,5 +17,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Exposer le port 5000
 EXPOSE 5000
 
-# Démarrer l'application Flask
-CMD ["flask", "run"]
+# Démarrer l'application Flaskdo
+CMD [ "flask", "run","--host","0.0.0.0","--port","5000"]
